# spacegame

./: Cargo.toml  flake.nix
assets/: bullet.glb  cursor.glb  debug_ship.glb  sun.glb
blend/: cursor.blend  cursor.blend1  debug_ship.blend  debug_ship.blend1
src/: camera.rs  cursor.rs  main.rs  player.rs  weapon.rs  world.rs
src_assets/blend/: bullet.blend  bullet.blend1  sun.blend
